--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "homepage": "./",
+  "homepage": "https://mestima.github.io/vzuh",
   "name": "vzuh_lang",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
