bootstrap package implemented

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mestima.github.io/vzuh",
+  "homepage": "https://mestima.github.io/vzuh_lang",
   "name": "vzuh_lang",
   "version": "0.1.0",
   "private": true,
